@@ -2,6 +2,7 @@ package com.pedidosya.api.controllers;
 
 import com.pedidosya.api.dto.Request.*;
 import com.pedidosya.api.models.Store;
+import com.pedidosya.api.models.User;
 import com.pedidosya.api.services.Impl.AddressClientImpl;
 import com.pedidosya.api.services.Impl.StoreImpl;
 import com.pedidosya.api.utils.mappers.IAddressClientMapper;
@@ -13,8 +14,10 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping(path = "/stores")
@@ -29,16 +32,34 @@ public class StoreController {
     @GetMapping("/{id}")
     public ResponseEntity<StoreDTO> findById(@PathVariable("id") Integer id){
         StoreDTO dto = convertToDto(storeImpl.readById(id));
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        User user = (User) authentication.getPrincipal();
+        Integer userId = user.getIdUser();
+        this.isFavourite(dto, userId);
         return new ResponseEntity<>(dto, HttpStatus.OK);
     }
 
     @Operation(summary="Listado de Restaurant por el Tipo de Restaurant pasado como parametro")
     @GetMapping("/type/{id}")
     public ResponseEntity<List<StoreDTO>> findByStoreTypeId(@PathVariable("id") Integer id){
-        List<StoreDTO> list = storeImpl.findByStoreType(id).stream().map(this::convertToDto).toList();
+
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        User user = (User) authentication.getPrincipal();
+        Integer userId = user.getIdUser();
+        //List<StoreDTO> list = storeImpl.findByStoreType(id).stream().map(this::convertToDto).toList();
+        List<StoreDTO> list = storeImpl.findByStoreType(id).stream()
+                .map(this::convertToDto)
+                .map(m -> this.isFavourite(m, userId))
+                .collect(Collectors.toList());
+
         return new ResponseEntity<>(list, HttpStatus.OK);
     }
 
+    private StoreDTO isFavourite(StoreDTO store, Integer userId){
+        Boolean resp = storeImpl.findByFavourite(store.getIdStore(), userId );
+        store.setIsFavourite(resp);
+        return store;
+    }
   private StoreDTO convertToDto(Store store){return iStoreMapper.toStoreDto(store);}
     private Store converToEntity(StoreDTO storeDTO){return iStoreMapper.toStore(storeDTO);}
 
